# eidolon

./: .dockerignore  .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  check_errors.txt  config.toml  docker-compose.yml  docs.md
.github/workflows/: docker-publish.yml
src/: config.rs  error.rs  lib.rs  main.rs
src/api/: anthropic.rs  gemini.rs  handlers.rs  mod.rs  models.rs  routes.rs
src/engine/: mod.rs  nlp.rs  patterns.rs  shield_model.rs
src/middleware/: mod.rs  preflight.rs  rate_limiter.rs  redaction.rs  shield.rs  streaming.rs  token_limiter.rs
src/state/: mod.rs  redis.rs
src/utils/: crypto.rs  faker.rs  mod.rs  response.rs
